# evalci

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  evalci.yaml  pyproject.toml  render.yaml
.github/workflows/: prompt-regression.yml
backend/: config.py  database.py  judge.py  main.py  models.py  runner.py  schemas.py
backend/metrics/: __init__.py  answer_relevance.py  base.py  faithfulness.py  regression_guard.py  semantic_similarity.py
backend/routers/: metrics.py  runs.py
backend/utils/: diff_detector.py  report.py
cli/: evalci.py
example/: golden_dataset.json
example/prompts/: rag_answer.txt  summarizer.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  demoData.ts  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: MetricTrendChart.tsx  RunDetail.tsx  RunsTable.tsx  StatusBadge.tsx  ThresholdEditor.tsx
frontend/src/hooks/: useMetricTrend.ts  useRuns.ts
frontend/src/types/: index.ts
scripts/: run_eval.sh
tests/: conftest.py  test_metrics.py  test_regression_guard.py  test_runner.py
