[tool.poetry]
name = "evalci"
version = "0.1.0"
description = "Prompt Regression CI — pytest for LLM prompts"
authors = ["EvalCI Contributors"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "cli" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.1", extras = ["standard"] }
sqlalchemy = { version = "^2.0.31", extras = ["asyncio"] }
aiosqlite = "^0.20.0"
httpx = "^0.27.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sentence-transformers = "^3.0.1"
torch = { version = "^2.3.1", extras = [] }
typer = { version = "^0.12.3", extras = ["all"] }
rich = "^13.7.1"
pyyaml = "^6.0.1"
numpy = "^1.26.4"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
evalci = "cli.evalci:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
